src/test/deca/context/invalid/addition_objet_int.deca
// Description :
// Addition entre un objet et un int donc impossible car type differet

// Resultats :
// Echec

class Ballon {
    int pression;
}

{
    Ballon b = new Ballon();
    int x = b + 1;
    print(x);
}
